Audio Description preference updates according to IC reviewing: 1) Update audio description preference summary as the Legal team    suggestion as b/194376036#comment6 2) Move audio description preference item under "Audio" category as the    UX team suggestions as b/194376037#comment#9
Preview: https://screenshot.googleplex.com/C24snywjHaRwG3g
Bug: 194376037
Bug: 194376036
Bug: 214634651
Test: local test
Change-Id: Ic72be85120bcf2fd36599cd9aad82b50aad32d04

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5619,10 +5619,10 @@
     <!-- Title for the accessibility audio adjustment page. [CHAR LIMIT=50] -->
     <string name="accessibility_audio_adjustment_title">Audio adjustment</string>
     <!-- Title for control audio description preference. [CHAR LIMIT=50] -->
-    <string name="accessibility_toggle_audio_description_preference_title">Audio Description</string>
+    <string name="accessibility_toggle_audio_description_preference_title">Audio description</string>
     <!-- Summary for accessibility preference for audio description when need
     audio description in adopted apps. [CHAR_LIMIT=NONE] -->
-    <string name="accessibility_audio_description_summary">Select audio sound track with audio description by default</string>
+    <string name="accessibility_audio_description_summary">Hear a description of what\u2019s happening on screen in supported movies and shows</string>
     <!-- List of synonyms used in the settings search bar to find the "Audio Description. [CHAR LIMIT=NONE] -->
     <string name="keywords_audio_description">audio description, audio, description, low vision,</string>
 
