--- a/res/values-en-rAU/strings.xml
+++ b/res/values-en-rAU/strings.xml
@@ -5353,7 +5353,7 @@
     <string name="media_output_switch_error_text" msgid="603563475910236831">"Can’t switch. Tap to try again"</string>
     <string name="wfc_disclaimer_title_text" msgid="4617195934203523503">"Important information"</string>
     <string name="wfc_disclaimer_agree_button_text" msgid="4082872292910770344">"CONTINUE"</string>
-    <string name="wfc_disclaimer_disagree_text" msgid="8424457394700137703">"NO THANKS"</string>
+    <string name="wfc_disclaimer_disagree_text" msgid="8424457394700137703">"NO, THANKS"</string>
     <string name="wfc_disclaimer_location_title_text" msgid="7913919887475418423">"Location"</string>
     <string name="wfc_disclaimer_location_desc_text" msgid="1417004513415772582">"Your operator may collect your location when you use this service for emergency calls.\n\nVisit your operator\'s privacy policy for details."</string>
     <string name="forget_passpoint_dialog_message" msgid="2433875063907365760">"You may lose access to any remaining time or data. Check with your provider before removing."</string>
