Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Id83f405b8b044af0e5fd33278109d7a656b9ecc1

--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -4817,7 +4817,7 @@
     <string name="display_cutout_emulation_keywords" msgid="4506580703807358127">"izrezana slika za ekran, urez"</string>
     <string name="overlay_option_device_default" msgid="7986355499809313848">"Podrazumevano podešavanje za uređaj"</string>
     <string name="overlay_toast_failed_to_apply" msgid="4839587811338164960">"Primena preklopnog elementa nije uspela"</string>
-    <string name="special_access" msgid="1767980727423395147">"Poseban pristup aplikaciji"</string>
+    <string name="special_access" msgid="1767980727423395147">"Poseban pristup aplikacija"</string>
     <plurals name="special_access_summary" formatted="false" msgid="4995506406763570815">
       <item quantity="one"><xliff:g id="COUNT">%d</xliff:g> aplikacija može da koristi neograničenu količinu podataka</item>
       <item quantity="few"><xliff:g id="COUNT">%d</xliff:g> aplikacije mogu da koriste neograničenu količinu podataka</item>
