--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -2710,7 +2710,7 @@
     <string name="smart_battery_manager_title" msgid="3677620516657920364">"Gestor de bateria"</string>
     <string name="smart_battery_title" msgid="9095903608520254254">"Gestiona les aplicacions automàticament"</string>
     <string name="smart_battery_summary" product="default" msgid="1492277404000064998">"Limita l\'ús de bateria de les aplicacions que no utilitzes habitualment"</string>
-    <string name="smart_battery_footer" msgid="8407121907452993645">"Quan el gestor de bateria detecta que hi ha aplicacions que consumeixen molta bateria, t\'ofereix l\'opció de restringir-les. És possible que les aplicacions restringides no funcionin correctament i que en rebis les notificacions amb retard."</string>
+    <string name="smart_battery_footer" msgid="8407121907452993645">"Quan el gestor de bateria detecta que hi ha aplicacions que estan esgotant la bateria, t\'ofereix l\'opció de restringir-les. És possible que les aplicacions restringides no funcionin correctament i que en rebis les notificacions amb retard."</string>
     <string name="restricted_app_title" msgid="6585080822121007436">"Aplicacions restringides"</string>
     <plurals name="restricted_app_summary" formatted="false" msgid="6059772951505411003">
       <item quantity="other">S\'ha limitat l\'ús de la bateria per a %1$d aplicacions</item>
@@ -4384,8 +4384,8 @@
       <item quantity="one"><xliff:g id="APP">%1$s</xliff:g> s\'està comportant de manera anòmala</item>
     </plurals>
     <plurals name="power_high_usage_title" formatted="false" msgid="8013115866788425817">
-      <item quantity="other">Hi ha aplicacions que consumeixen molta bateria</item>
-      <item quantity="one"><xliff:g id="APP">%1$s</xliff:g> consumeix molta bateria</item>
+      <item quantity="other">Hi ha aplicacions que estan esgotant la bateria</item>
+      <item quantity="one"><xliff:g id="APP">%1$s</xliff:g> està esgotant la bateria</item>
     </plurals>
     <string name="high_power_filter_on" msgid="447849271630431531">"Sense optimitzar"</string>
     <string name="high_power_on" msgid="8778058701270819268">"Sense optimitzar"</string>
