--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -2122,7 +2122,7 @@
     <string name="app_disable_dlg_positive" msgid="1414218905322009505">"Menonaktifkan aplikasi"</string>
     <string name="app_disable_dlg_text" msgid="2449382902751908916">"Jika Anda menonaktifkan aplikasi ini, Android dan aplikasi lain mungkin tidak berfungsi lagi sesuai harapan. Perlu diingat, Anda tidak dapat menghapus aplikasi yang disertakan oleh pabrikan di perangkat Anda. Namun, Anda dapat menonaktifkannya, yang berarti mematikan dan menyembunyikan aplikasi tersebut di perangkat Anda."</string>
     <string name="app_disable_notifications_dlg_title" msgid="6686569904059411780">"Matikan notifikasi?"</string>
-    <string name="app_install_details_group_title" msgid="1172114479073704677">"Toko Aplikasi"</string>
+    <string name="app_install_details_group_title" msgid="1172114479073704677">"App Store"</string>
     <string name="app_install_details_title" msgid="7783556181897142187">"Detail aplikasi"</string>
     <string name="app_install_details_summary" msgid="2013043219249992373">"Aplikasi diinstal dari <xliff:g id="APP_STORE">%1$s</xliff:g>"</string>
     <string name="instant_app_details_summary" msgid="417197491598208216">"Info selengkapnya di <xliff:g id="APP_STORE">%1$s</xliff:g>"</string>
