--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -4817,7 +4817,7 @@
     <string name="display_cutout_emulation_keywords" msgid="4506580703807358127">"изрезана слика за екран, урез"</string>
     <string name="overlay_option_device_default" msgid="7986355499809313848">"Подразумевано подешавање за уређај"</string>
     <string name="overlay_toast_failed_to_apply" msgid="4839587811338164960">"Примена преклопног елемента није успела"</string>
-    <string name="special_access" msgid="1767980727423395147">"Посебан приступ апликацији"</string>
+    <string name="special_access" msgid="1767980727423395147">"Посебан приступ апликација"</string>
     <plurals name="special_access_summary" formatted="false" msgid="4995506406763570815">
       <item quantity="one"><xliff:g id="COUNT">%d</xliff:g> апликација може да користи неограничену количину података</item>
       <item quantity="few"><xliff:g id="COUNT">%d</xliff:g> апликације могу да користе неограничену количину података</item>
