Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I68916107f4991d2ce5ee11a25c5f69f1e49390a7

--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -3690,6 +3690,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Zvukovi i vibracija punjenja"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Zvukovi montiranja"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Zvukovi pri dodiru"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibracija pri dodiru"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Dodirne povratne informacije za dodir, tastaturu i još toga"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Reprodukuje bazna stanica"</string>
@@ -4834,7 +4836,7 @@
     <string name="display_cutout_emulation_keywords" msgid="4506580703807358127">"izrezana slika za ekran, urez"</string>
     <string name="overlay_option_device_default" msgid="7986355499809313848">"Podrazumevano podešavanje za uređaj"</string>
     <string name="overlay_toast_failed_to_apply" msgid="4839587811338164960">"Primena preklopnog elementa nije uspela"</string>
-    <string name="special_access" msgid="1767980727423395147">"Poseban pristup aplikaciji"</string>
+    <string name="special_access" msgid="1767980727423395147">"Poseban pristup aplikacija"</string>
     <plurals name="special_access_summary" formatted="false" msgid="4995506406763570815">
       <item quantity="one"><xliff:g id="COUNT">%d</xliff:g> aplikacija može da koristi neograničenu količinu podataka</item>
       <item quantity="few"><xliff:g id="COUNT">%d</xliff:g> aplikacije mogu da koriste neograničenu količinu podataka</item>
