--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -3647,6 +3647,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Vibración y sonidos de carga"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Sonidos al conectar"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Sonidos de teclas y botones"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Mostrar siempre el ícono en el modo de vibración"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibración táctil"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Respuesta táctil al presionar, usar el teclado y más"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Reprod. parlantes conector"</string>
