--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -825,7 +825,7 @@
     <string name="bluetooth_error_title" msgid="2284738188253690278"></string>
     <string name="bluetooth_connecting_error_message" msgid="3941893154784152112">"اتصال به <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ممکن نیست."</string>
     <string name="bluetooth_preference_scan_title" msgid="3460316252463771851">"اسکن برای دستگاه‌ها"</string>
-    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"بازخوانی"</string>
+    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"بازآوری کردن"</string>
     <string name="bluetooth_searching_for_devices" msgid="6541984133657573124">"در حال جستجو..."</string>
     <string name="bluetooth_preference_device_settings" msgid="1688662188157019998">"تنظیمات دستگاه"</string>
     <string name="bluetooth_preference_paired_dialog_title" msgid="1090131276572055841">"دستگاه مرتبط‌شده"</string>
@@ -911,8 +911,8 @@
     <string name="wifi_ask_disable" msgid="1663208096020309639">"‏<xliff:g id="REQUESTER">%s</xliff:g> می‌خواهد Wi-Fi را خاموش کند"</string>
     <string name="art_verifier_for_debuggable_title" msgid="1926445785190030479">"تأیید بایت‌کد برنامه‌های اشکال‌زدا"</string>
     <string name="art_verifier_for_debuggable_summary" msgid="4802875841862652879">"‏به ART برای تأیید بایت‌کد برنامه‌های اشکال‌زدا اجازه داده شود"</string>
-    <string name="show_refresh_rate" msgid="5742688821872354973">"نمایش نرخ بازخوانی"</string>
-    <string name="show_refresh_rate_summary" msgid="3558118122374609663">"نمایش نرخ فعلی بازخوانی نمایشگر"</string>
+    <string name="show_refresh_rate" msgid="5742688821872354973">"نمایش نرخ بازآوری"</string>
+    <string name="show_refresh_rate_summary" msgid="3558118122374609663">"نمایش نرخ فعلی بازآوری نمایشگر"</string>
     <string name="nfc_quick_toggle_title" msgid="3607620705230351666">"NFC"</string>
     <string name="nfc_quick_toggle_summary" product="tablet" msgid="3622326550467939809">"‏تبادل داده‌ها هنگامی‌که رایانه لوحی دستگاه مجهزبه NFC را لمس می‌کند مجاز شود"</string>
     <string name="nfc_quick_toggle_summary" product="default" msgid="1460871052409162980">"‏تبادل داده‌ها هنگامی‌که تلفن دستگاه مجهزبه NFC را لمس می‌کند مجاز شود"</string>
@@ -1333,9 +1333,9 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"تعادل سفیدی نمایشگر"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"نمایشگر روان"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"به‌طور خودکار سرعت بازخوانی را برای بعضی محتواها، از ۶۰ هرتز تا ۹۰ هرتز بالا می‌برد. مصرف باتری را افزایش می‌دهد."</string>
-    <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"اعمال بالاترین نرخ بازخوانی"</string>
-    <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"بالاترین نرخ بازخوانی برای پاسخ‌گویی بهبودیافته لمس و کیفیت پویانمایی. مصرف باتری را افزایش می‌دهد."</string>
+    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"به‌طور خودکار نرخ بازآوری را برای بعضی محتواها از ۶۰ هرتز تا ۹۰ هرتز بالا می‌برد. مصرف باتری را افزایش می‌دهد."</string>
+    <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"اعمال بالاترین نرخ بازآوری"</string>
+    <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"بالاترین نرخ بازآوری برای پاسخ‌گویی بهبودیافته لمس و کیفیت پویانمایی. مصرف باتری را افزایش می‌دهد."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"توجه به صفحه"</string>
     <string name="adaptive_sleep_summary_on" msgid="313187971631243800">"روشن / تازمانی‌که درحال تماشای صفحه‌نمایش باشید، صفحه خاموش نخواهد شد"</string>
     <string name="adaptive_sleep_summary_off" msgid="5272156339202897523">"خاموش"</string>
@@ -2866,7 +2866,7 @@
     <string name="menu_stats_unplugged" msgid="7125297366200634285">"<xliff:g id="UNPLUGGED">%1$s</xliff:g> از زمان جدا کردن"</string>
     <string name="menu_stats_last_unplugged" msgid="230678127178268655">"در حین قطع اتصال آخر برای <xliff:g id="UNPLUGGED">%1$s</xliff:g>"</string>
     <string name="menu_stats_total" msgid="2713445396954503670">"مقدار کل استفاده"</string>
-    <string name="menu_stats_refresh" msgid="6727628139586938835">"بازخوانی"</string>
+    <string name="menu_stats_refresh" msgid="6727628139586938835">"بازآوری کردن"</string>
     <string name="process_mediaserver_label" msgid="6135260215912215092">"سرور رسانه"</string>
     <string name="process_dex2oat_label" msgid="1190208677726583153">"بهینه‌سازی برنامه"</string>
     <string name="battery_saver" msgid="7737147344510595864">"بهینه‌سازی باتری"</string>
@@ -3645,6 +3645,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"صدا و لرزش هنگام شارژ شدن"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"صداهای اتصال به پایه"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"صدای لمس کردن"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"لرزش لمس کردن"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"بازخورد لمسی برای ضربه زدن، صفحه‌کلید و موارد بیشتر"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"پخش بلندگوی پایه"</string>
@@ -4919,7 +4921,7 @@
     <string name="auto_sync_account_title" msgid="1070908045600374254">"همگام‌سازی خودکار داده‌های برنامه"</string>
     <string name="auto_sync_personal_account_title" msgid="3544275021920818595">"همگام‌سازی خودکار داده‌های شخصی"</string>
     <string name="auto_sync_work_account_title" msgid="6060310415978781885">"همگام‌سازی خودکار داده‌های کاری"</string>
-    <string name="auto_sync_account_summary" msgid="7580352130028957346">"اجازه دادن به برنامه‌ها برای بازخوانی خودکار داده‌ها"</string>
+    <string name="auto_sync_account_summary" msgid="7580352130028957346">"اجازه دادن به برنامه‌ها برای بازآوری خودکار داده‌ها"</string>
     <string name="account_sync_title" msgid="7036067017433297574">"همگام‌سازی حساب"</string>
     <string name="account_sync_summary_some_on" msgid="911460286297968724">"همگام‌سازی <xliff:g id="ID_1">%1$d</xliff:g> مورد از <xliff:g id="ID_2">%2$d</xliff:g> مورد روشن است"</string>
     <string name="account_sync_summary_all_on" msgid="2953682111836599841">"همگام‌سازی همه موارد روشن است"</string>
