--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -3645,6 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"ചാർജിംഗ് ശബ്‌ദങ്ങളും വൈബ്രേഷനും"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"ഡോക്ക് ചെയ്യൽ ശബ്‌ദങ്ങൾ"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"സ്‌പർശന ശബ്ദം"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"വൈബ്രേറ്റ് മോഡിൽ എല്ലായ്‌പ്പോഴും ഐക്കൺ കാണിക്കുക"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"ടച്ച് വൈബ്രേഷൻ"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"ടാപ്പ്, കീബോർഡ് തുടങ്ങിയവയ്ക്കുള്ള വൈബ്രേഷൻ ഫീഡ്ബാക്ക്"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"ഡോക്ക് സ്‌പീക്കർ പ്ലേ ചെയ്യുന്നു"</string>
