--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -3645,6 +3645,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"ਚਾਰਜਿੰਗ ਦੀਆਂ ਧੁਨੀਆਂ ਤੇ ਥਰਥਰਾਹਟ"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"ਡੌਕ ਕਰਨ ਦੀਆਂ ਅਵਾਜ਼ਾਂ"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"ਸਪਰਸ਼ ਧੁਨੀਆਂ"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"ਸਪੱਰਸ਼ ਸੰਬੰਧੀ ਥਰਥਰਾਹਟ"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"ਟੈਪ, ਕੀ-ਬੋਰਡ ਅਤੇ ਹੋਰ ਲਈ ਛੋਹ ਪ੍ਰਤੀਕਰਮ"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"ਡੌਕ ਸਪੀਕਰ ਪਲੇ ਕਰਦਾ ਹੈ"</string>
