--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -3645,6 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Sons/vibração de carregamento"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Sons da estação de ancoragem"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Sons de toque"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Mostrar sempre o ícone no modo de vibração"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibração de resposta tátil"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Resposta tátil para o toque, o teclado e muito mais."</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Repr. da col. da est. de anc."</string>
