--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -3737,6 +3737,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Zvoki in vibriranje ob polnjenju"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Zvok ob odlaganju v nosilec"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Zvoki dotikov"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Vedno pokaži ikono v načinu vibriranja"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibriranje ob dotiku"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Odziv z vibriranjem ob dotiku, pritisku tipk in drugem"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Zvočnik nosilca je vklopljen"</string>
