--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -3690,6 +3690,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Звукови и вибрација пуњења"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Звукови монтирања"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Звукови при додиру"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Вибрација при додиру"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Додирне повратне информације за додир, тастатуру и још тога"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Репродукује базна станица"</string>
@@ -4834,7 +4836,7 @@
     <string name="display_cutout_emulation_keywords" msgid="4506580703807358127">"изрезана слика за екран, урез"</string>
     <string name="overlay_option_device_default" msgid="7986355499809313848">"Подразумевано подешавање за уређај"</string>
     <string name="overlay_toast_failed_to_apply" msgid="4839587811338164960">"Примена преклопног елемента није успела"</string>
-    <string name="special_access" msgid="1767980727423395147">"Посебан приступ апликацији"</string>
+    <string name="special_access" msgid="1767980727423395147">"Посебан приступ апликација"</string>
     <plurals name="special_access_summary" formatted="false" msgid="4995506406763570815">
       <item quantity="one"><xliff:g id="COUNT">%d</xliff:g> апликација може да користи неограничену количину података</item>
       <item quantity="few"><xliff:g id="COUNT">%d</xliff:g> апликације могу да користе неограничену количину података</item>
