--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -3648,6 +3648,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"充電音效及震動"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"座架插入音效"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"觸控音效"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"觸控震動"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"輕按、鍵盤等操作的觸感反應"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"插座喇叭播放音效"</string>
