--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -3645,6 +3645,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"የኃይል መሙላት ድምፅ እና ንዝረት"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"የመትከል ድምጾች"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"ድምፆችን ይንኩ"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"የንኪ ንዝረት"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"መታ ለማድረግ፣ ለቁልፍ ሰሌዳ እና ለተጨማሪ ነገሮች የንዝረት ግብረመልስ"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"የመትከያ ድምጽ ማጉያ ያጫውታል"</string>
