--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -3825,6 +3825,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"الأصوات والاهتزاز عند الشحن"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"أصوات الإرساء"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"أصوات اللمس"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"اهتزاز الجهاز عند لمسه"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"ملاحظات ملموسة للنقر ولوحة المفاتيح وغير ذلك"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"إرساء السماعة قيد التشغيل"</string>
