--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -3737,6 +3737,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Гукі і вібрацыя пры зарадцы"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Гукі док-станцыі"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Гукі пры дотыку"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Вібрацыя пры націсканні"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Тактыльны водгук пры націсканні на кнопкі, клавіятуру і г.д."</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Уключыць док-дынамік"</string>
