--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -3647,6 +3647,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Звуци при зарежд. и вибриране"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Звуци за докинг станция"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Звуци при докосване"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Вибриране при докосване"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Осезателна обратна връзка за докосванията, клавиатурата и др."</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Док. станц.: Пуск. на високог."</string>
