--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -3735,6 +3735,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Zvuky a vibrace při nabíjení"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Zvuky při vložení do doku"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Zvuky při dotyku"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibrace dotykové obrazovky"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Hmatová odezva pro klepnutí, klávesnici a další"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Zvuk reproduktoru doku"</string>
