--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -3645,6 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Ήχοι φόρτισης και δόνηση"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Ήχοι σύνδεσης"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Ήχοι αφής"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Να εμφανίζ. πάντα το εικον. σε λειτουργία δόνησης"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Δόνηση αφής"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Ανάδραση αφής για πάτημα, πληκτρολόγιο και άλλα"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Αναπαραγωγή σύνδεσης ηχείου"</string>
