--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -3645,6 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Suoni e vibrazione ricarica"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Suoni dock"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Suoni alla pressione"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Mostra sempre l\'icona in modalità vibrazione"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibrazione al tocco"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Feedback aptico per tocco, tastiera e altro ancora"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Riproduzioni con altoparlanti dock"</string>
