--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -3645,6 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"ಚಾರ್ಜಿಂಗ್ ಧ್ವನಿಗಳು - ವೈಬ್ರೇಟ್‌"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"ಡಾಕಿಂಗ್ ಧ್ವನಿಗಳು"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"ಸ್ಪರ್ಶ ಧ್ವನಿಗಳು"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"ವೈಬ್ರೇಟ್ ಮೋಡ್‌ನಲ್ಲಿದ್ದಾಗ ಯಾವಾಗಲೂ ಐಕಾನ್ ತೋರಿಸಿ"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"ಸ್ಪರ್ಶಿಸಿದಾಗ ವೈಬ್ರೇಷನ್‌"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"ಟ್ಯಾಪ್ ಕೀಬೋರ್ಡ್ ಮತ್ತು ಇನ್ನೂ ಹೆಚ್ಚಿನವುಗಳಿಗಾಗಿ ಹ್ಯಾಪ್ಟಿಕ್ ಪ್ರತಿಕ್ರಿಯೆ"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"ಡಾಕ್ ಸ್ಪೀಕರ್ ಪ್ಲೇಗಳು"</string>
