--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -3647,6 +3647,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"충전 소리 및 진동"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"도킹 소리"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"터치음"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"터치 진동"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"탭, 키보드 등에 대한 햅틱 반응"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"도크 스피커 재생"</string>
