--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -3647,6 +3647,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Звуци и вибрации при полнење"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Звуци на држач со звучници"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Звуци при допир"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Секогаш прикажувај икона во режим на вибрации"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Вибрации при допир"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Повратни информации со допир за тастатура, допирање и друго"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Држач со звучници"</string>
