--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -3645,6 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Цэнэглэх дуу болон чичиргээ"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Док-н ая"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Хүрэлтийн ая"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Чичрэх горимд байхад дүрс тэмдгийг үргэлж харуул"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Хүрэхэд мэдрэгдэх чичиргээ"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Товшилт, гар болон бусад зүйлийн мэдрэгдэх хариу"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Док чанга яригчаар тоглуулах"</string>
