--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -3645,6 +3645,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Bunyi dan getaran pengecasan"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Bunyi dok"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Bunyi sentuhan"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Getaran sentuhan"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Maklum balas haptik untuk ketikan, papan kekunci dan pelbagai lagi"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Pembesar suara dok dimainkan"</string>
