--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -3647,6 +3647,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Sons e vibração ao carregar"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Sons da base"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Sons de toque"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Sempre mostrar o ícone no modo de vibração"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibrar ao tocar na tela"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Retorno tátil para toque, teclado e muito mais"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Repr. de alto-falante em base"</string>
