--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -3692,6 +3692,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Sunete și vibrații pentru încărcare"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Sunete la andocare"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Sunete la atingere"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibrație la atingere"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Feedback tactil pentru atingere, tastatură și multe altele"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Redare difuzor dispoz. andoc."</string>
