--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -3735,6 +3735,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Сигналы зарядки"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Звуки через док-динамик"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Звуки нажатия на экран"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Всегда показывать значок в режиме вибрации"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Вибрация при касании"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Виброотклик при нажатии кнопок, клавиш клавиатуры и т. д."</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Проигрывать через док-динамик"</string>
