--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -3737,6 +3737,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Zvuky a vibrácie pri nabíjaní"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Zvuky doku"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Zvuky pri klepnutí"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Vždy zobrazovať ikonu v režime vibrovania"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibrácia pri klepnutí"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Hmatová odozva pre klepnutie, klávesnicu a ďalšie akcie"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Reproduktory doku"</string>
