--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -3645,6 +3645,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Tingujt dhe dridhja e karikimit"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Tingujt e stacionimit"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Tingujt e prekjes"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Dridhje për prekjen"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Reagimi me prekje për trokitjen, tastierën etj."</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Luhet nga altoparlanti i stacionit"</string>
