--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -3645,6 +3645,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"சார்ஜிங் ஒலிகளும் அதிர்வுகளும்"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"டாக்கிங் ஒலிகள்"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"தொடுதலின் போது"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"தொடுதல் அதிர்வு"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"தட்டுதல், கீபோர்டு மற்றும் பலவற்றின் போது அதிர்வு எழுப்புதல்"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"சார்ஜ் ஸ்பீக்கரை இயக்கு"</string>
