--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -3645,6 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"เสียงชาร์จและการสั่น"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"เสียงเชื่อมต่อแท่นลำโพง"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"เสียงแตะ"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"แสดงไอคอนเสมอเมื่ออยู่ในโหมดสั่น"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"การสั่นเมื่อแตะ"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"การตอบสนองแบบรู้สึกได้สำหรับการแตะ แป้นพิมพ์ และอื่นๆ"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"เล่นเสียงจากแท่นลำโพง"</string>
