--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -3645,6 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Tunog, vibration kapag charging"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Mga tunog sa pag-dock"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Mga tunog sa pagpindot"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Palaging ipakita ang icon kapag nasa vibrate mode"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Pag-vibrate sa pagpindot"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Haptic na feedback para sa pag-tap, keyboard, at higit pa"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Magpe-play ang speaker mg dock"</string>
