--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -3735,6 +3735,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Звук і вібрація для заряджання"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Звуки вставлення в док-станцію"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Звуки під час дотику"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Вібрація під час дотику"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Вібровідгук під час дотику, роботи на клавіатурі тощо"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Звук через динамік док-станції"</string>
