--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -3647,6 +3647,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Quvvatlashdagi tovushlar va tebranish"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Taglik qurilma ovozlari"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Teginish tovushlari"</string>
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Tebranish rejimida doim belgi chiqib tursin"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Ekranga teginganda tebranish"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Tugma, klaviatura va boshqalar bosilgandagi tebranish"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Taglik karnay bilan ijro etish"</string>
