--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -3646,6 +3646,8 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Imisindo yokushaja nokudlidliz"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Imisindo yokudokha"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Imisindo yokuthinta"</string>
+    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
+    <skip />
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Ukudlidlizela kokuthinta"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Impendulo ezwakalayo yokuthepha, ikhibhodi, nokuningi"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Isipikha sedokhu sidlala"</string>
