Make NFC Setting summary text translatable
Add a string in resource xml for the work app summary text in the
default payment selection list.

Bug: 202369556
Test: manual test
Change-Id: Iec3f4bd47c641f3226506a5c49f1601cb24f613a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7774,6 +7774,8 @@
     <string name="nfc_payment_btn_text_set_deault">Set default</string>
     <!-- Label of the Update button of the Update default payment app dialog [CHAR LIMIT=40] -->
     <string name="nfc_payment_btn_text_update">Update</string>
+    <!-- Summary text of the work apps in the default payment selection list [CHAR LIMIT=20]-->
+    <string name="nfc_work_text">Work</string>
     <!-- Restrictions settings --><skip/>
 
     <!-- Restriction settings title [CHAR LIMIT=35] -->
