Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I2408577986c728f96e74f593f07cbcb55da3fd6f

--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -1308,7 +1308,7 @@
     <string name="color_mode_option_saturated" msgid="3413853820158447300">"সংপৃক্ত"</string>
     <string name="color_mode_option_automatic" msgid="2281217686509980870">"অভিযোজিত"</string>
     <string name="color_mode_summary_natural" msgid="8298840714001791628">"মাত্ৰ সঠীক ৰংৰবোৰ ব্যৱহাৰ কৰক"</string>
-    <string name="color_mode_summary_automatic" msgid="8157885594041700275">"উজ্জ্বল আৰু সঠীক ৰংৰ মাজত মিলাওক"</string>
+    <string name="color_mode_summary_automatic" msgid="8157885594041700275">"উজ্জ্বল আৰু সঠিক ৰঙৰ মাজত মিলাওক"</string>
     <string name="accelerometer_summary_on" product="tablet" msgid="6413384391658481700">"টে\'বলেটো ঘূৰালে স্বয়ংক্ৰিয়ভাৱে স্ক্ৰীণৰ দিশ সলনি কৰক"</string>
     <string name="accelerometer_summary_on" product="default" msgid="7117139542131700779">"ফোনটো ঘূৰালে স্বয়ংক্ৰিয়ভাৱে স্ক্ৰীণৰ দিশ সলনি কৰক"</string>
     <string name="accelerometer_summary_off" product="tablet" msgid="3747370091309939684">"টে\'বলেটো ঘূৰালে স্বয়ংক্ৰিয়ভাৱে স্ক্ৰীণৰ দিশ সলনি কৰক"</string>
