--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -1483,7 +1483,7 @@
     <string name="security_patch" msgid="4071756145347865382">"Actualización de seguranza de Android"</string>
     <string name="model_info" msgid="8997566254717810904">"Modelo"</string>
     <string name="hardware_info" msgid="7035211991066637019">"Modelo e hardware"</string>
-    <string name="hardware_revision" msgid="3454709180861965025">"Versión de hardware"</string>
+    <string name="hardware_revision" msgid="3454709180861965025">"Versión do hardware"</string>
     <string name="fcc_equipment_id" msgid="6596668314025646129">"ID de equipamento"</string>
     <string name="baseband_version" msgid="2600182227599835857">"Versión de banda base"</string>
     <string name="kernel_version" msgid="3513538109381366881">"Versión de kernel"</string>
