--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -274,7 +274,7 @@
     <string name="date_time_set_timezone_title" msgid="790404320569600222">"المنطقة الزمنية"</string>
     <string name="date_time_set_timezone" msgid="2915125337941495746">"اختيار المنطقة الزمنية"</string>
     <string name="date_time_set_date_title" msgid="7624166157167528407">"التاريخ"</string>
-    <string name="date_time_search_region" msgid="1364133854952610919">"منطقة البحث"</string>
+    <string name="date_time_search_region" msgid="1364133854952610919">"البحث عن منطقة"</string>
     <string name="date_time_select_region" msgid="5449345333305056072">"المنطقة"</string>
     <string name="date_time_select_fixed_offset_time_zones" msgid="594848300882055361">"‏اختيار فارق الوقت عن UTC"</string>
     <string name="zone_change_to_from_dst" msgid="686451769985774294">"يبدأ <xliff:g id="TIME_TYPE">%1$s</xliff:g> بحلول <xliff:g id="TRANSITION_DATE">%2$s</xliff:g>."</string>
@@ -992,8 +992,8 @@
     <string name="nfc_quick_toggle_summary" product="default" msgid="1460871052409162980">"‏السماح بتبادل البيانات عند لمس الهاتف لجهاز من خلال تقنية \"الاتصالات القريبة المدى\" (NFC)"</string>
     <string name="nfc_disclaimer_title" msgid="3696580694485048039">"‏تفعيل NFC"</string>
     <string name="nfc_disclaimer_content" msgid="8256675597551036207">"‏يتم من خلال تقنية الاتصال بالحقل القريب (NFC) تبادل البيانات بين هذا الجهاز والأجهزة أو الأهداف المجاورة الأخرى، مثل محطات الدفع وبرامج قراءة الوصول والعلامات أو الإعلانات التفاعلية."</string>
-    <string name="nfc_secure_settings_title" msgid="4906958426927741485">"‏يجب فتح قفل الجهاز لاستخدام تقنية الاتصالات القريبة المدى (NFC)"</string>
-    <string name="nfc_secure_toggle_summary" product="default" msgid="407654335737959071">"‏السماح باستخدام الاتصالات القريبة المدى (NFC) عندما تكون الشاشة مفتوحة فقط"</string>
+    <string name="nfc_secure_settings_title" msgid="4906958426927741485">"‏يجب فتح قفل الجهاز لاستخدام تقنية الاتصال القصير المدى (NFC)"</string>
+    <string name="nfc_secure_toggle_summary" product="default" msgid="407654335737959071">"‏السماح باستخدام الاتصال القصير المدى (NFC) عندما تكون الشاشة مفتوحة فقط."</string>
     <string name="android_beam_settings_title" msgid="2797963824490671295">"‏شعاع Android"</string>
     <string name="android_beam_on_summary" msgid="6067720758437490896">"‏جاهز لنقل محتوى التطبيق عبر الاتصالات القريبة المدى (NFC)"</string>
     <string name="android_beam_off_summary" msgid="5693961375631325042">"إيقاف"</string>
@@ -2415,7 +2415,7 @@
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"استخدام زر أدوات تسهيل الاستخدام في الفتح"</string>
     <string name="accessibility_tutorial_dialog_title_volume" msgid="494810949830845234">"اضغط مع الاستمرار على مفتاحَي مستوى الصوت للفتح"</string>
     <string name="accessibility_tutorial_dialog_title_triple" msgid="7089562919284464400">"انقر على الشاشة ثلاث مرات لفتحها."</string>
-    <string name="accessibility_tutorial_dialog_title_gesture" msgid="4965810097646659332">"الفتح بحركة واحدة"</string>
+    <string name="accessibility_tutorial_dialog_title_gesture" msgid="4965810097646659332">"استخدام إيماءة للفتح"</string>
     <string name="accessibility_tutorial_dialog_title_gesture_settings" msgid="8485448068531147828">"استخدام إيماءة \"سهولة الاستخدام\" الجديدة"</string>
     <string name="accessibility_tutorial_dialog_message_button" msgid="7002398857479782303">"لاستخدام هذه الميزة، انقر على زر أدوات تمكين الوصول <xliff:g id="ACCESSIBILITY_ICON">%s</xliff:g> في أسفل الشاشة.\n\nللتبديل بين الميزات، انقر مع الاستمرار على زر أدوات تمكين الوصول."</string>
     <string name="accessibility_tutorial_dialog_message_floating_button" msgid="2551777208185138391">"لاستخدام هذه الميزة، انقر على زر أدوات تسهيل الاستخدام في شاشتك."</string>
@@ -2535,7 +2535,7 @@
     </plurals>
     <string name="accessibility_audio_adjustment_title" msgid="1332113739136802997">"تعديل الصوت"</string>
     <string name="accessibility_summary_shortcut_enabled" msgid="4030427268146752644">"الاختصار مفعَّل"</string>
-    <string name="accessibility_summary_shortcut_disabled" msgid="564005462092499068">"غير مفعَّل"</string>
+    <string name="accessibility_summary_shortcut_disabled" msgid="564005462092499068">"غير مفعَّلة"</string>
     <string name="accessibility_summary_state_enabled" msgid="1065431632216039369">"مفعّل"</string>
     <string name="accessibility_summary_state_disabled" msgid="9173234532752799694">"غير مفعّل"</string>
     <string name="accessibility_summary_state_stopped" msgid="2343602489802623424">"الخدمة لا تعمل. انقر للحصول على المعلومات."</string>
@@ -3319,7 +3319,7 @@
     <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="6387714350903085918">"‏سيتم نسخ أي تغييرات تجريها على حساباتك على الويب إلى جهازك اللوحي تلقائيًا.\n\nويمكن أن تنسخ بعض الحسابات أيضًا أي تغييرات تجريها على الجهاز اللوحي إلى الويب تلقائيًا. يعمل حساب Google بهذه الطريقة."</string>
     <string name="data_usage_auto_sync_on_dialog" product="default" msgid="6457107552266187107">"‏أي تغييرات تجريها على حساباتك على الويب سيتم نسخها إلى هاتفك تلقائيًا.\n\nوقد تعمل بعض الحسابات أيضًا على نسخ التغييرات التي تجريها على الهاتف إلى الويب تلقائيًا، فهذه هي طريقة عمل حساب Google."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="1783917145440587470">"هل تريد إيقاف مزامنة البيانات تلقائيًا؟"</string>
-    <string name="data_usage_auto_sync_off_dialog" msgid="6523112583569674837">"لن يغيّر هذا الإجراء عملية الحفاظ على استخدامات البيانات والبطارية، ولكن ستحتاج إلى مزامنة كل حساب يدويًا لجمع المعلومات الحديثة ولن تتلقّى إشعارات عند إتمام التحديثات."</string>
+    <string name="data_usage_auto_sync_off_dialog" msgid="6523112583569674837">"سيؤدي ذلك إلى توفير استخدام البيانات والبطارية، ولكن ستحتاج إلى مزامنة كل حساب يدويًا لجمع المعلومات الحديثة ولن تتلقّى إشعارات عند إتمام التحديثات."</string>
     <string name="data_usage_cycle_editor_title" msgid="2019035830921480941">"تاريخ إعادة ضبط دورة الاستخدام"</string>
     <string name="data_usage_cycle_editor_subtitle" msgid="1026234456777365545">"اليوم من كل شهر:"</string>
     <string name="data_usage_cycle_editor_positive" msgid="6110165528024717527">"ضبط"</string>
@@ -3976,7 +3976,7 @@
     <string name="bubble_app_setting_all" msgid="312524752846978277">"إظهار فقاعات محادثات لكل المحادثات"</string>
     <string name="bubble_app_setting_selected" msgid="4324386074198040675">"إظهار فقاعات المحادثات للمحادثات المحدَّدة"</string>
     <string name="bubble_app_setting_none" msgid="8643594711863996418">"عدم السماح بأي فقاعات"</string>
-    <string name="bubble_app_setting_selected_conversation_title" msgid="3060958976857529933">"محادثات"</string>
+    <string name="bubble_app_setting_selected_conversation_title" msgid="3060958976857529933">"المحادثات"</string>
     <string name="bubble_app_setting_excluded_conversation_title" msgid="324818960338773945">"إظهار فقاعات المحادثات لكل المحادثات إلا"</string>
     <string name="bubble_app_setting_unbubble_conversation" msgid="1769789500566080427">"إيقاف فقاعات المحادثات لهذه المحادثة"</string>
     <string name="bubble_app_setting_bubble_conversation" msgid="1461981680982964285">"تفعيل فقاعات المحادثات لهذه المحادثة"</string>
@@ -4023,7 +4023,7 @@
     <string name="notification_importance_title" msgid="1545158655988342703">"السُلوك"</string>
     <string name="notification_importance_unspecified" msgid="1543165530748339700">"السماح بالصوت"</string>
     <string name="notification_importance_blocked" msgid="4933285639639899394">"عدم عرض الإشعارات"</string>
-    <string name="conversations_category_title" msgid="5586541340846847798">"محادثات"</string>
+    <string name="conversations_category_title" msgid="5586541340846847798">"المحادثات"</string>
     <string name="conversation_category_title" msgid="6777135786004214149">"المحادثة"</string>
     <string name="conversation_section_switch_title" msgid="3332885377659473775">"قسم المحادثات"</string>
     <string name="conversation_section_switch_summary" msgid="6123587625929439674">"السماح للتطبيق باستخدام قسم المحادثات"</string>
@@ -5340,7 +5340,7 @@
     <string name="storage_volume_total" msgid="7102720999351050601">"مساحة التخزين المستخدمة من أصل <xliff:g id="TOTAL">%1$s</xliff:g>"</string>
     <string name="storage_percent_full" msgid="7211888326013020857">"مستخدمة"</string>
     <string name="storage_usage_summary" msgid="4591121727356723463">"تم استخدام <xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g>."</string>
-    <string name="storage_total_summary" msgid="7163360249534964272">"المجموع: <xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g>"</string>
+    <string name="storage_total_summary" msgid="7163360249534964272">"الإجماليّ: <xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g>"</string>
     <string name="clear_instant_app_data" msgid="5951258323364386357">"محو التطبيق"</string>
     <string name="clear_instant_app_confirmation" msgid="3964731334459209482">"هل تريد إزالة هذا التطبيق الفوري؟"</string>
     <string name="launch_instant_app" msgid="8503927414339606561">"فتح"</string>
@@ -5764,7 +5764,7 @@
     <string name="rtt_settings_no_visible" msgid="7440356831140948382"></string>
     <string name="rtt_settings_visible_during_call" msgid="7866181103286073700"></string>
     <string name="rtt_settings_always_visible" msgid="2364173070088756238"></string>
-    <string name="media_output_panel_stop_casting_button" msgid="6094875883164119035">"إيقاف الإرسال"</string>
+    <string name="media_output_panel_stop_casting_button" msgid="6094875883164119035">"إيقاف البث"</string>
     <string name="volte_5G_limited_title" msgid="5908052268836750629">"‏هل تريد إيقاف VoLTE؟"</string>
     <string name="volte_5G_limited_text" msgid="7150583768725182345">"‏سيؤدي هذا أيضًا إلى إيقاف اتصال الجيل الخامس (5G).\nلا يمكنك استخدام الإنترنت أثناء إجراء مكالمة صوتية، وقد لا تعمل بعض التطبيقات أيضًا."</string>
     <string name="no_5g_in_dsds_text" product="default" msgid="772747677303920132">"‏عندما تستخدم شريحتَي SIM، سيقتصر عمل هذا الهاتف على الجيل الرابع. "<annotation id="url">"مزيد من المعلومات"</annotation></string>
