Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I30a0186f56da191283ace1ff9fde307556d99a69

--- a/res/values-fr-rCA/strings.xml
+++ b/res/values-fr-rCA/strings.xml
@@ -2467,8 +2467,8 @@
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Activer la réduction suppl. de la luminosité"</string>
     <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"Raccourci de la réduction supplémentaire de la luminosité"</string>
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"Réduction supplémentaire de la luminosité"</string>
-    <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Assombrir l\'écran de votre téléphone au-delà de sa luminosité minimale"</string>
-    <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Assombrir l\'écran de votre tablette au-delà de sa luminosité minimale"</string>
+    <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Assombrissez l\'écran de votre téléphone au-delà de sa luminosité minimale"</string>
+    <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Assombrissez l\'écran de votre tablette au-delà de sa luminosité minimale"</string>
     <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="1061317523242240222">"Rendez l\'écran plus sombre pour qu\'il soit plus facile à lire.&lt;br/&gt;&lt;br/&gt; Cela peut être pratique dans certains cas : &lt;ol&gt; &lt;li&gt; La luminosité minimale par défaut de votre téléphone est quand même trop intense&lt;/li&gt; &lt;li&gt; Vous utilisez votre téléphone dans un environnement sombre, comme la nuit ou dans une salle sombre avant d\'aller vous coucher&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="7839714100830254580">"Assombrissez votre écran pour qu\'il soit plus facile à lire.&lt;br/&gt;&lt;br/&gt; Cela peut être pratique dans certains cas : &lt;ol&gt; &lt;li&gt; La luminosité minimale par défaut de votre tablette est quand même trop intense&lt;/li&gt; &lt;li&gt; Vous utilisez votre tablette dans un environnement sombre, comme la nuit ou dans une salle sombre avant d\'aller vous coucher&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"Intensité"</string>
@@ -3645,8 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Sons et vibrations de recharge"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Sons de la station d\'accueil"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Sons des touches"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Toujours afficher l\'icône en mode vibration"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibration tactile"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Retour haptique pour les touchers, le clavier et plus"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Lecture : station d\'accueil"</string>
