--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -3645,8 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"चार्जिंग की आवाज़ और वाइब्रेशन"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"डॉक करने की ध्वनियां"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"छूने पर आने वाली आवाज़ें"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"वाइब्रेशन मोड के चालू होने का आइकॉन हमेशा दिखाएं"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"छूने पर कंपन (वाइब्रेशन) चालू करें"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"टैप करने, कीबोर्ड पर टाइप करने और दूसरी चीज़ों के लिए हैप्टिक सुझाव चालू करें"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"डॉक स्पीकर चलेगा"</string>
