--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -4412,8 +4412,8 @@
     <string name="high_power_off" msgid="317000444619279018">"Се оптимизира користењето на батеријата"</string>
     <string name="high_power_system" msgid="3966701453644915787">"Оптимизација на батеријата не е достапна"</string>
     <string name="high_power_desc" msgid="2753076899835765338">"Не применувајте оптимизација на батеријата. Може побрзо да ја истроши вашата батерија."</string>
-    <string name="high_power_prompt_title" msgid="2574478825228409124">"Да се извршува во заднина?"</string>
-    <string name="high_power_prompt_body" msgid="6460557929559616041">"Ако дозволите <xliff:g id="APP_NAME">%1$s</xliff:g> секогаш да се извршува во заднина, тоа може да го намали траењето на батеријата. \n\nОва може да го промените подоцна во „Поставки &gt; Апликации и известувања“."</string>
+    <string name="high_power_prompt_title" msgid="2574478825228409124">"Да работи во заднина?"</string>
+    <string name="high_power_prompt_body" msgid="6460557929559616041">"Ако дозволите <xliff:g id="APP_NAME">%1$s</xliff:g> секогаш да работи во заднина, тоа може да го намали траењето на батеријата. \n\nОва може да го промените подоцна во „Поставки &gt; Апликации и известувања“."</string>
     <string name="battery_summary" msgid="2491764359695671207">"<xliff:g id="PERCENTAGE">%1$s</xliff:g> употреба од последното целосно полнење"</string>
     <string name="battery_summary_24hr" msgid="7656033283282656551">"Користење од <xliff:g id="PERCENTAGE">%1$s</xliff:g> во минатите 24 часа"</string>
     <string name="no_battery_summary" msgid="5769159953384122003">"Нема употреба на батерија од последното целосно полнење"</string>
