--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -1302,7 +1302,7 @@
     <string name="color_mode_option_saturated" msgid="3413853820158447300">"সংপৃক্ত"</string>
     <string name="color_mode_option_automatic" msgid="2281217686509980870">"অভিযোজিত"</string>
     <string name="color_mode_summary_natural" msgid="8298840714001791628">"মাত্ৰ সঠীক ৰংৰবোৰ ব্যৱহাৰ কৰক"</string>
-    <string name="color_mode_summary_automatic" msgid="8157885594041700275">"উজ্জ্বল আৰু সঠীক ৰংৰ মাজত মিলাওক"</string>
+    <string name="color_mode_summary_automatic" msgid="8157885594041700275">"উজ্জ্বল আৰু সঠিক ৰঙৰ মাজত মিলাওক"</string>
     <string name="accelerometer_summary_on" product="tablet" msgid="6413384391658481700">"টে\'বলেটো ঘূৰালে স্বয়ংক্ৰিয়ভাৱে স্ক্ৰীণৰ দিশ সলনি কৰক"</string>
     <string name="accelerometer_summary_on" product="default" msgid="7117139542131700779">"ফোনটো ঘূৰালে স্বয়ংক্ৰিয়ভাৱে স্ক্ৰীণৰ দিশ সলনি কৰক"</string>
     <string name="accelerometer_summary_off" product="tablet" msgid="3747370091309939684">"টে\'বলেটো ঘূৰালে স্বয়ংক্ৰিয়ভাৱে স্ক্ৰীণৰ দিশ সলনি কৰক"</string>
@@ -3645,8 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"চ্চাৰ্জ কৰাৰ ধ্বনি আৰু কম্পন"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"ড’ক কৰাৰ শব্দ"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"স্পৰ্শৰ ধ্বনি"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"কম্পন ম’ডত থকাৰ সময়ত সদায় চিহ্নটো দেখুৱাওক"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"কম্পনক স্পৰ্শ কৰক"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"টিপা কাৰ্য, কীব\'ৰ্ড আৰু অধিক বস্তুৰ বাবে হেপ্টিক প্ৰতিক্ৰিয়া"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"ডক স্পীকাৰ প্লে\' হৈছে"</string>
