--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -3645,8 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Şarj səsi və vibrasiyası"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Toqquşma səsləri"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Toxunuş səsləri"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Vibrasiya rejimində həmişə ikonanı göstərin"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Toxunuş vibrasiyası"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Sensor, klaviatura və s. üçün toxunuşlu rəy"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Dinamik oxutması"</string>
