--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -3690,8 +3690,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Zvukovi i vibracija punjenja"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Zvukovi montiranja"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Zvukovi pri dodiru"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Uvek prikazuj ikonu u režimu vibracije"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibracija pri dodiru"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Dodirne povratne informacije za dodir, tastaturu i još toga"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Reprodukuje bazna stanica"</string>
