--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -3645,8 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Sons de càrrega i vibració"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Sons de la base"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Sons en tocar"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Mostra sempre la icona en mode de vibració"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibració en tocar"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Resposta hàptica en tocar, fer servir el teclat i més"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Sons de la base d\'altaveu"</string>
