--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -3084,7 +3084,7 @@
     <string name="sync_disabled" msgid="1636223106968593391">"Synchronisierung: AUS"</string>
     <string name="sync_error" msgid="846923369794727644">"Synchronisierungsfehler"</string>
     <string name="last_synced" msgid="1527008461298110443">"Zuletzt synchronisiert: <xliff:g id="LAST_SYNC_TIME">%1$s</xliff:g>"</string>
-    <string name="sync_in_progress" msgid="6200093151211458977">"Synchronisieren…"</string>
+    <string name="sync_in_progress" msgid="6200093151211458977">"Wird synchronisiert…"</string>
     <string name="settings_backup" msgid="5357973563989458049">"Einstellungen sichern"</string>
     <string name="settings_backup_summary" msgid="6803046376335724034">"Meine Einstellungen sichern"</string>
     <string name="sync_menu_sync_now" msgid="3948443642329221882">"Jetzt synchronisieren"</string>
@@ -3343,7 +3343,7 @@
     <string name="user_remove_user_menu" msgid="2183714948094429367">"<xliff:g id="USER_NAME">%1$s</xliff:g> vom Gerät löschen"</string>
     <string name="user_lockscreen_settings" msgid="4596612658981942092">"Einstellungen für den Sperrbildschirm"</string>
     <string name="user_add_on_lockscreen_menu" msgid="2539059062034644966">"Nutzer vom Sperrbildschirm aus hinzufügen"</string>
-    <string name="user_confirm_remove_self_title" msgid="926265330805361832">"Sich selbst löschen?"</string>
+    <string name="user_confirm_remove_self_title" msgid="926265330805361832">"Dich selbst löschen?"</string>
     <string name="user_confirm_remove_title" msgid="3626559103278006002">"Diesen Nutzer löschen?"</string>
     <string name="user_profile_confirm_remove_title" msgid="3131574314149375354">"Dieses Profil entfernen?"</string>
     <string name="work_profile_confirm_remove_title" msgid="6229618888167176036">"Arbeitsprofil entfernen?"</string>
@@ -3405,7 +3405,7 @@
     <string name="extreme_threats_summary" msgid="3560742429496902008">"Warnungen zu extremen Gefahren für Leben und Eigentum erhalten"</string>
     <string name="severe_threats_title" msgid="8962959394373974324">"Erhebliche Gefahren"</string>
     <string name="severe_threats_summary" msgid="4982256198071601484">"Warnungen zu erheblichen Gefahren für Leben und Eigentum erhalten"</string>
-    <string name="amber_alerts_title" msgid="5238275758191804575">"AMBER-Benachrichtigungen"</string>
+    <string name="amber_alerts_title" msgid="5238275758191804575">"AMBER Alerts"</string>
     <string name="amber_alerts_summary" msgid="5755221775246075883">"Bulletins über Kindesentführungen erhalten"</string>
     <string name="repeat_title" msgid="8676570486899483606">"Wiederholen"</string>
     <string name="call_manager_enable_title" msgid="1214301265395158720">"Anrufverwaltung aktivieren"</string>
@@ -3648,8 +3648,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Töne und Vibration beim Aufladen"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Docking-Sounds"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Töne bei Berührung"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Im Vibrationsmodus immer Symbol anzeigen"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibration bei Berührung"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Haptisches Feedback beim Tippen, bei der Tastaturnutzung und mehr"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Dock-Lautsprecherwiedergabe"</string>
@@ -5433,11 +5432,11 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Kurz"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Lang"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Geldbörse anzeigen"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Zugriff auf Geldbörse aus Sperrbildschirm und Schnelleinstellungen erlauben"</string>
+    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Zugriff auf Geldbörse vom Sperrbildschirm und aus den Schnelleinstellungen erlauben"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Gerätesteuerung anzeigen"</string>
     <string name="lockscreen_privacy_controls_summary" msgid="6952176547084269909">"Zugriffssteuerung bei Sperre"</string>
-    <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Uhr in zwei Zeilen anzeigen, wenn verfügbar"</string>
-    <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Uhr in zwei Zeilen"</string>
+    <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Uhrzeit in zwei Zeilen anzeigen, wenn verfügbar"</string>
+    <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Uhrzeit in zwei Zeilen"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
     <string name="rtt_settings_no_visible" msgid="7440356831140948382"></string>
     <string name="rtt_settings_visible_during_call" msgid="7866181103286073700"></string>
