--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -3645,8 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Getaran &amp; suara pengisian daya"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Memasang suara di dok"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Suara sentuhan"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Selalu tampilkan ikon saat dalam mode getar"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Getaran saat disentuh"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Info via sentuhan untuk ketukan, keyboard, dan lainnya"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Dok pemutaran speaker"</string>
