--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -3737,8 +3737,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"צלילים ורטט לטעינה"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"צלילים בעגינה"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"צלילי מגע"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"הסמל תמיד מוצג במצב רטט"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"רטט מגע"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"משוב פיזי להקשה, מקלדת ועוד"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"רמקול בעגינה מופעל"</string>
