--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -3735,8 +3735,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Įkrovimo garsai ir vibravimas"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Prijungimo prie doko garsai"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Lietimo garsai"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Visada rodyti piktogramą vibravimo režimu"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Palietimų vibravimas"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Juntamas palietimo, klaviatūros ir kitų funkcijų grįžtamasis ryšys"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Prie doko prij. garsiak. gars."</string>
