--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -3690,8 +3690,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Uzlādes skaņas un vibrācija"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Dokošanas skaņas"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Pieskāriena skaņas"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Rādīt ikonu, kad ieslēgts vibrācijas režīms"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Pieskāriena vibrācija"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Vibrācija pieskaroties, lietojot tastatūru vai citas iespējas"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Dokoto skaļruņu skaņa"</string>
