--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -3645,8 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Lyd og vibrering ved lading"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Lyd fra dokk"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Berøringslyder"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Vis alltid ikonet når enheten er i vibreringsmodus"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Berøringsvibrering"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Fysisk tilbakemelding for trykk, tastatur med mer"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Avspilling fra dokkhøyttaler"</string>
