--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -5600,8 +5600,8 @@
     <string name="lockscreen_privacy_not_secure" msgid="3251276389681975912">"Сначала необходимо настроить блокировку экрана"</string>
     <string name="power_menu_long_press_for_assist" msgid="2016813721240777737">"Запускать Ассистента долгим нажатием"</string>
     <string name="power_menu_long_press_for_assist_summary" msgid="8251928804984560312">"Нажмите и удерживайте кнопку питания для запуска Ассистента"</string>
-    <string name="power_menu_power_volume_up_hint" msgid="1733051433583045623">"Меню кнопки питания и экстренных вызовов\nЧтобы его открыть, одновременно нажмите кнопки питания и увеличения громкости."</string>
-    <string name="power_menu_power_prevent_ringing_hint" msgid="5786494894009727654">"Отключение звука звонка\nБыстрый запуск функции доступен в меню регулировки громкости."</string>
+    <string name="power_menu_power_volume_up_hint" msgid="1733051433583045623">"Меню кнопки питания и экстренных вызовов:\nЧтобы его открыть, одновременно нажмите кнопки питания и увеличения громкости."</string>
+    <string name="power_menu_power_prevent_ringing_hint" msgid="5786494894009727654">"Отключение звука звонка:\nБыстрый запуск функции доступен в меню регулировки громкости."</string>
     <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Длительность нажатия и удержания"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Настройте чувствительность, выбрав длительность нажатия и удержания кнопки питания."</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Быстро"</string>
