--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -3645,8 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"ශබ්ද සහ කම්පනය වෙනස් කිරීම"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"ඩොක් කිරීමේ ශබ්ද"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"ස්පර්ශ ශබ්ද"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"කම්පන ප්‍රකාරය තුළ තිබෙන සැම විට නිරූපකය පෙන්වන්න"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"ස්පර්ශ කම්පනය"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"තට්ටු කිරීම, යතුරු පුවරුව සහ තවත් දේ සඳහා ස්පෘශ්‍ය ප්‍රතිපෝෂණය"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"ඩොක් නාදකය ධාවනය වේ"</string>
