--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -3690,8 +3690,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Звукови и вибрација пуњења"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Звукови монтирања"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Звукови при додиру"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Увек приказуј икону у режиму вибрације"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Вибрација при додиру"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Додирне повратне информације за додир, тастатуру и још тога"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Репродукује базна станица"</string>
