--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -3645,8 +3645,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Şarj olma sesi ve titreşim"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Yuvaya yerleştirme sesleri"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Dokunma sesleri"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Titreşim modundayken simgeyi her zaman göster"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Dokunma titreşimi"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Dokunma, klavye ve diğer işlemlerde dokunsal geri bildirim"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Yuva hoparlörü çalsın"</string>
