--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -3647,8 +3647,7 @@
     <string name="charging_sounds_title" msgid="5261683808537783668">"Âm thanh và rung khi sạc"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Âm đế kết nối"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Âm thanh khi chạm"</string>
-    <!-- no translation found for vibrate_icon_title (1281100105045362530) -->
-    <skip />
+    <string name="vibrate_icon_title" msgid="1281100105045362530">"Luôn hiện biểu tượng khi ở chế độ rung"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Rung khi chạm"</string>
     <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Phản hồi xúc giác cho thao tác chạm, bàn phím và nhiều thao tác khác"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Phát âm đế kết nối"</string>
