Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I04fa07dc7042775ce964d9d1e6a2af4d8b7cd12b

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -3463,7 +3463,7 @@
     <string name="sim_no_inserted_msg" msgid="7272710974813741735">"SIMカードが挿入されていません"</string>
     <string name="sim_status_title" msgid="6188770698037109774">"SIM のステータス"</string>
     <string name="sim_status_title_sim_slot" msgid="4932996839194493313">"SIM ステータス（SIM スロット %1$d）"</string>
-    <string name="sim_call_back_title" msgid="4274099761123657464">"デフォルトのSIMからコールバック"</string>
+    <string name="sim_call_back_title" msgid="4274099761123657464">"デフォルトの SIM からかけ直す"</string>
     <string name="sim_outgoing_call_title" msgid="7759080345748128897">"発信用のSIM"</string>
     <string name="sim_other_call_settings" msgid="5956308869284958883">"その他の通話設定"</string>
     <string name="preferred_network_offload_title" msgid="6453199586512609557">"優先ネットワークオフロード"</string>
