Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ie196fdd648f8d7e1df21cd7323aa851d164db6c2

--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -3379,7 +3379,7 @@
     <string name="nfc_payment_app_and_desc" msgid="2607417639227030398">"<xliff:g id="APP">%1$s</xliff:g> - <xliff:g id="DESCRIPTION">%2$s</xliff:g>"</string>
     <string name="nfc_payment_use_default" msgid="788899906312142803">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਵਰਤੋ"</string>
     <string name="nfc_payment_favor_default" msgid="4508491832174644772">"ਹਮੇਸ਼ਾਂ"</string>
-    <string name="nfc_payment_favor_open" msgid="8554643344050373346">"ਸਿਵਾਏ ਇਸਦੇ ਜਦੋਂ ਦੂਜਾ ਭੁਗਤਾਨ ਐਪ ਖੁੱਲ੍ਹਾ ਹੋਵੇ"</string>
+    <string name="nfc_payment_favor_open" msgid="8554643344050373346">"ਸਿਵਾਏ ਇਸਦੇ ਜਦੋਂ ਦੂਜੀ ਭੁਗਤਾਨ ਐਪ ਖੁੱਲ੍ਹੀ ਹੋਵੇ"</string>
     <string name="nfc_payment_pay_with" msgid="3001320460566523453">"ਸੰਪਰਕ-ਰਹਿਤ ਟਰਮੀਨਲ ਵਿਖੇ, ਇਸ ਨਾਲ ਭੁਗਤਾਨ ਕਰੋ:"</string>
     <string name="nfc_how_it_works_title" msgid="1363791241625771084">"ਟਰਮੀਨਲ \'ਤੇ ਭੁਗਤਾਨ ਕਰਨਾ"</string>
     <string name="nfc_how_it_works_content" msgid="1141382684788210772">"ਇੱਕ ਭੁਗਤਾਨ ਐਪ ਸੈੱਟ ਅੱਪ ਕਰੋ। ਫਿਰ ਸੰਪਰਕ-ਰਹਿਤ ਚਿੰਨ੍ਹ ਵਾਲੇ ਕਿਸੇ ਵੀ ਟਰਮੀਨਲ ਵੱਲ ਨੂੰ ਆਪਣੇ ਫ਼ੋਨ ਦਾ ਪਿਛਲਾ ਪਾਸਾ ਸਿਰਫ਼ ਫੜ੍ਹ ਕੇ ਰੱਖੋ।"</string>
