--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -3379,7 +3379,7 @@
     <string name="nfc_payment_app_and_desc" msgid="2607417639227030398">"<xliff:g id="APP">%1$s</xliff:g> – <xliff:g id="DESCRIPTION">%2$s</xliff:g>"</string>
     <string name="nfc_payment_use_default" msgid="788899906312142803">"Utilizar predefinição"</string>
     <string name="nfc_payment_favor_default" msgid="4508491832174644772">"Sempre"</string>
-    <string name="nfc_payment_favor_open" msgid="8554643344050373346">"Exceto enquanto outra app de pagamento está aberta"</string>
+    <string name="nfc_payment_favor_open" msgid="8554643344050373346">"Exceto enquanto outra app de pagamentos está aberta"</string>
     <string name="nfc_payment_pay_with" msgid="3001320460566523453">"Num terminal sem contacto, pague com:"</string>
     <string name="nfc_how_it_works_title" msgid="1363791241625771084">"Como pagar num terminal"</string>
     <string name="nfc_how_it_works_content" msgid="1141382684788210772">"Configure uma aplicação de pagamento. Em seguida, basta aproximar a parte de trás do telemóvel a um terminal com o símbolo de pagamento sem contacto."</string>
