--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -302,10 +302,10 @@
     <string name="location_settings_primary_switch_title" msgid="8849081766644685127">"Uporabi lokacijo"</string>
     <string name="location_settings_summary_location_off" msgid="4797932754681162262">"Izklopljeno"</string>
     <plurals name="location_settings_summary_location_on" formatted="false" msgid="1019959038518185676">
-      <item quantity="one">Vklopljeno – dostop do lokacije ima <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacija</item>
-      <item quantity="two">Vklopljeno – dostop do lokacije imata <xliff:g id="COUNT_1">%1$d</xliff:g> aplikaciji</item>
-      <item quantity="few">Vklopljeno – dostop do lokacije imajo <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacije</item>
-      <item quantity="other">Vklopljeno – dostop do lokacije ima <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacij</item>
+      <item quantity="one">Vklopljeno – dostop do lokacije ima <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacija.</item>
+      <item quantity="two">Vklopljeno – dostop do lokacije imata <xliff:g id="COUNT_1">%1$d</xliff:g> aplikaciji.</item>
+      <item quantity="few">Vklopljeno – dostop do lokacije imajo <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacije.</item>
+      <item quantity="other">Vklopljeno – dostop do lokacije ima <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacij.</item>
     </plurals>
     <string name="location_settings_loading_app_permission_stats" msgid="6054103701535557342">"Nalaganje …"</string>
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Aplikacije z dovoljenjem za naprave v bližini lahko določijo relativno lokacijo povezanih naprav."</string>
