--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -2154,7 +2154,7 @@
     <string name="no_services" msgid="3898812785511572899">"Ակտիվ չէ"</string>
     <string name="runningservicedetails_services_title" msgid="11853795112787355">"Ծառայություններ"</string>
     <string name="runningservicedetails_processes_title" msgid="5292271587797234038">"Գործընթացներ"</string>
-    <string name="service_stop" msgid="5712522600201308795">"Դադարեցնել"</string>
+    <string name="service_stop" msgid="5712522600201308795">"Կանգնեցնել"</string>
     <string name="service_manage" msgid="3896322986828332075">"Կարգավորումներ"</string>
     <string name="service_stop_description" msgid="6327742632400026677">"Այս ծառայությունը գործարկվել է ծրագրի կոմից: Դրա դադարեցումը կարող է ձախողել ծրագիրը:"</string>
     <string name="heavy_weight_stop_description" msgid="3086419998820881290">"Այս ծրագիրը չի կարող անվտանգ դադարեցվել: Եթե դուք այն դադարեցնեք, հնարավոր է` կորցնեք ձեր ընթացիկ աշխատանքի մի մասը:"</string>
@@ -2549,7 +2549,7 @@
     <string name="accessibility_service_action_perform_description" msgid="7807832069800034738">"Կարող է հետագծել ձեր գործողությունները հավելվածներում և սարքակազմի սենսորների վրա, ինչպես նաև հավելվածներում կատարել գործողություններ ձեր անունից։"</string>
     <string name="accessibility_dialog_button_allow" msgid="8274918676473216697">"Թույլատրել"</string>
     <string name="accessibility_dialog_button_deny" msgid="2037249860078259284">"Մերժել"</string>
-    <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"Դադարեցնել"</string>
+    <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"Կանգնեցնել"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"Չեղարկել"</string>
     <string name="disable_service_title" msgid="2909108731776956167">"Դադարեցնե՞լ «<xliff:g id="SERVICE">%1$s</xliff:g>» ծառայությունը"</string>
     <string name="disable_service_message" msgid="4814173941688548016">"Եթե հպեք <xliff:g id="STOP">%1$s</xliff:g> կոճակին, <xliff:g id="SERVICE">%2$s</xliff:g> ծառայությունը կանջատվի։"</string>
@@ -2816,7 +2816,7 @@
     <string name="battery_sugg_bluetooth_basic" msgid="8943564578546832037">"Անջատեք Bluetooth-ը, երբ այն չեք օգտագործում"</string>
     <string name="battery_sugg_bluetooth_headset" msgid="6495519793211758353">"Փորձեք միանալ մեկ այլ Bluetooth սարքի"</string>
     <string name="battery_desc_apps" msgid="4187483940383266017">"Ծրագրի կողմից օգտագործված մարտկոցը"</string>
-    <string name="battery_sugg_apps_info" msgid="4796917242296658454">"Դադարեցնել կամ ապատեղադրել ծրագիրը"</string>
+    <string name="battery_sugg_apps_info" msgid="4796917242296658454">"Կանգնեցնել կամ ապատեղադրել ծրագիրը"</string>
     <string name="battery_sugg_apps_gps" msgid="7221335088647925110">"Ընտրեք մարտկոցը խնայող ռեժիմ"</string>
     <string name="battery_sugg_apps_settings" msgid="6527223370162382166">"Հավելվածը կարող է առաջարկել կարգավորումներ` մարտկոցի օգտագործումը նվազեցնելու համար"</string>
     <string name="battery_desc_users" msgid="1959428568888686847">"Օգտատիրոջ կողմից օգտագործված մարտկոցը"</string>
@@ -5438,13 +5438,13 @@
     <string name="rtt_settings_no_visible" msgid="7440356831140948382"></string>
     <string name="rtt_settings_visible_during_call" msgid="7866181103286073700"></string>
     <string name="rtt_settings_always_visible" msgid="2364173070088756238"></string>
-    <string name="media_output_panel_stop_casting_button" msgid="6094875883164119035">"Դադարեցնել հեռարձակումը"</string>
+    <string name="media_output_panel_stop_casting_button" msgid="6094875883164119035">"Կանգնեցնել հեռարձակումը"</string>
     <string name="volte_5G_limited_title" msgid="5908052268836750629">"Անջատե՞լ VoLTE-ն"</string>
     <string name="volte_5G_limited_text" msgid="7150583768725182345">"5G կապը նույնպես կանջատվի։\nՁայնային զանգերի ժամանակ դուք չեք կարող օգտվել ինտերնետից, և որոշ հավելվածներ կարող են չաշխատել։"</string>
     <string name="no_5g_in_dsds_text" product="default" msgid="772747677303920132">"Երկու SIM քարտ օգտագործելու դեպքում այս հեռախոսը կսահմանափակվի 4G ցանցով։ "<annotation id="url">"Իմանալ ավելին"</annotation></string>
     <string name="no_5g_in_dsds_text" product="tablet" msgid="4757328474425714624">"Երկու SIM քարտ օգտագործելու դեպքում այս պլանշետը կսահմանափակվի 4G ցանցով։ "<annotation id="url">"Իմանալ ավելին"</annotation></string>
     <string name="no_5g_in_dsds_text" product="device" msgid="6983783505032683314">"Երկու SIM քարտ օգտագործելու դեպքում այս սարքը կսահմանափակվի 4G ցանցով։ "<annotation id="url">"Իմանալ ավելին"</annotation></string>
-    <string name="cached_apps_freezer" msgid="1057519579761550350">"Դադարեցնել քեշավորված հավելվածների գործարկումը"</string>
+    <string name="cached_apps_freezer" msgid="1057519579761550350">"Կանգնեցնել քեշավորված հավելվածների գործարկումը"</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Թույլատրել Կարգավորումների էկրանների վրադրումները"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Թույլատրել հավելվածներին, որոնք կարող են ցուցադրվել այլ հավելվածների վրա, վրադրել Կարգավորումների էկրանները"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Մեդիա"</string>
