--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -3697,9 +3697,9 @@
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"оплата, по умолчанию"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"входящее уведомление"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"USB-модем, Bluetooth-модем, точка доступа Wi-Fi"</string>
-    <string name="keywords_touch_vibration" msgid="1125291201902251273">"осязание, вибрировать, экран, чувствительность"</string>
-    <string name="keywords_ring_vibration" msgid="1736301626537417541">"осязание, вибрация, телефон, звонок, чувствительность, вызов"</string>
-    <string name="keywords_notification_vibration" msgid="9162262178415439951">"осязание, вибрация, чувствительность"</string>
+    <string name="keywords_touch_vibration" msgid="1125291201902251273">"виброотклик, вибрировать, экран, чувствительность"</string>
+    <string name="keywords_ring_vibration" msgid="1736301626537417541">"виброотклик, вибрация, телефон, звонок, чувствительность, вызов"</string>
+    <string name="keywords_notification_vibration" msgid="9162262178415439951">"виброотклик, вибрация, чувствительность"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"энергосбережение, постоянная экономия заряда, батарея"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"программа, расписание, режим энергосбережения, экономия заряда, батарея, автоматически, процент"</string>
     <string name="keywords_enhance_4g_lte" msgid="658889360486800978">"volte, расширенный вызов, звонки по сети 4g"</string>
